--- a/index.html
+++ b/index.html
@@ -4,7 +4,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+    <link rel="stylesheet" href="reset.css">
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="responsive.css">
     <title>Viramain</title>
     <link rel="shortcut icon" href="https://icon-library.com/images/architecture-icon-png/architecture-icon-png-17.jpg">
 </head>
@@ -34,10 +37,12 @@
     <div class="text-wrapper">
     <p class="text">architecture/interior</p>
     <h1 class="main-text">we are building experts</h1>
+    <a href="#blog"><button type="button" class="mainbtn btn btn-light">READ MORE</button></a>
 </div>
-    <a href="#news" class="project">
+    <!-- <a href="#news" class="project">
         <div class="projects">our projects</div>
-    </a>
+    </a> -->
+    
 
 </div>
 </div>
@@ -52,9 +57,10 @@
             <p class="main-title-sm">WHO WE ARE</p>
             <h1 class="main-title-bg">ARCHITECTURE STUDIO</h1>
             <p class="main-title-p">An award-winning design and development team that is proud of our work.<br><br>We use an agile approach to test assumptions and connect with the needs of your audience early and ofter. Technology enables great experiences. We like and use technology but we have tried hard to not fall in love with it.</p>
-            <a href="#news" class="read-moree">
+            <!-- <a href="#news" class="read-moree">
                 <div class="read-more">READ MORE</div>
-            </a>
+            </a> -->
+            <a href="#news"><button type="button" class="btn btn-light">READ MORE</button></a>
         </div>
     </div>
 </section>
@@ -117,9 +123,7 @@
         </div>
         </div>
     </div>
-    <a href="#blog" class="read-moree">
-        <div class="read-more">READ MORE</div>
-    </a>
+    <div class="buttoni"><a href="#home"><button type="button" class="btn btn-light">READ MORE</button></div></a>
 </section>
 <footer id="about">
     <div class="container footeri">
