--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <div class="container">
     <div class="home-wrapper">
         <p class="logo">Viramain</p>
-    <nav class="nav-links active" id="navbarLinks">
+    <nav class="nav-links " id="navbarLinks">
         <ul>
             <a href="#home"><li>Home </li></a>
             <li><a href="#blog">Blog</a></li>
