--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
     </div>
     <div class="tree-divs">
         <div class="tree-divs-div">
-            <img src="pirveli111.png">
+            <img class="tree-divs-div-img" src="pirveli111.png">
             <div class="tree-divs-div-text-wrapper">
             <h4 class="div-title ">SOMETHING I NEED TO TELL YOU</h4>
             <p class="main-title-sm">MAY 16, 2016</p>
@@ -102,7 +102,7 @@
         </div>
         </div>
         <div class="tree-divs-div">
-            <img src="meore222.png">
+            <img class="tree-divs-div-img" src="meore222.png">
             <div class="tree-divs-div-text-wrapper">
             <h4 class="div-title ">ARE YOU DOING THE RIGHT WAY?</h4>
             <p class="main-title-sm">MAY 16, 2016</p>
@@ -110,7 +110,7 @@
         </div>
         </div>
         <div class="tree-divs-div">
-            <img src="mesame333.png">
+            <img class="tree-divs-div-img" src="mesame333.png">
             <div class="tree-divs-div-text-wrapper">
             <h4 class="div-title ">WHY YOU SHOULD ALWAYS FIRST</h4>
             <p class="main-title-sm">MAY 16, 2016</p>
