--- a/index.html
+++ b/index.html
@@ -70,12 +70,12 @@
                 <h4 class="div-title">ARCHITECTURE</h4>
                 <p class="div-p">Lorem ipsum dolor sit amet consectetur adipisicing elit. Explicabo omnis fugit fuga iste libero, minus quam deserunt sunt!</p>
             </div>
-            <div class="four-divs-div margina1">
+            <div class="four-divs-div margina">
                 <img src="interior.png" class="div-icon">
                 <h4 class="div-title">INTERIOR DESIGN</h4>
                 <p class="div-p">Is the process of shaping the experience of interior space, through the manipulation of spatial volume</p>
             </div>
-            <div class="four-divs-div margina1">
+            <div class="four-divs-div margina">
                 <img src="furniture.png" class="div-icon">
                 <h4 class="div-title">FURNITURE DESIGN</h4>
                 <p class="div-p">Furniture refers to movable objects intended to support various human activities such as seating.</p>
