--- a/index.html
+++ b/index.html
@@ -125,9 +125,9 @@
     <p class="footer-c">© Coded by Kacho.</p>
     <a href="#home" class="gotoa">GO TO TOP OF THE PAGE</a>
     <div class="logos">
-        <a href="https://www.facebook.com/kacho1337"><img src="facebook-logo.svg" class="logoebi"></a>
-        <a href="https://www.instagram.com/kachovar/"><img src="instagram.svg" class="logoebi"></a>
-        <a href="https://www.linkedin.com/in/luka-katchkatchishvili"><img src="linkedin.svg" class="logoebi"></a>
+        <a href="https://www.facebook.com/kacho1337" target="_blank"><img src="facebook-logo.svg" class="logoebi"></a>
+        <a href="https://www.instagram.com/kachovar/" target="_blank"><img src="instagram.svg" class="logoebi"></a>
+        <a href="https://www.linkedin.com/in/luka-katchkatchishvili" target="_blank"><img src="linkedin.svg" class="logoebi"></a>
     </div>
 </div>
 </footer>
