--- a/index.html
+++ b/index.html
@@ -45,8 +45,8 @@
 <section class="main-wrapper container" id="blog">
     <div class="main">
         <div class="img2">
-            <div class="first image"><img src="pirveli.png"></div>
-            <div class="second image"><img src="meore.png"></div>
+            <div ><img src="pirveli.png" class="first image"></div>
+            <div><img src="meore.png" class="second image"></div>
         </div>
         <div class="main-title">
             <p class="main-title-sm">WHO WE ARE</p>
