--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
             <div class="four-divs-div margina">
                 <img src="diamond.png" class="div-icon">
                 <h4 class="div-title">ARCHITECTURE</h4>
-                <p class="div-p">Lorem ipsum dolor sit amet consectetur adipisicing elit. Explicabo omnis fugit fuga iste libero, minus quam deserunt sunt!</p>
+                <p class="div-p">architecture has to do with planning and designing form, space and ambience to reflect functional.</p>
             </div>
             <div class="four-divs-div margina">
                 <img src="interior.png" class="div-icon">
