--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="https://kit.fontawesome.com/6de6aa5275.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
-    <link rel="stylesheet" href="/css/reset.css">
-    <link rel="stylesheet" href="/css/style.css">
-    <link rel="stylesheet" href="/css/responsive.css">
+    <link rel="stylesheet" href="css/reset.css">
+    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/responsive.css">
     <title>Viramain</title>
     <link rel="shortcut icon" href="https://icon-library.com/images/architecture-icon-png/architecture-icon-png-17.jpg">
 </head>
@@ -45,8 +45,8 @@
 <section class="main-wrapper container" id="blog">
     <div class="main">
         <div class="img2">
-            <div ><img src="/img/pirveli.png" class="first image"></div>
-            <div><img src="/img/meore.png" class="second image"></div>
+            <div ><img src="img/pirveli.png" class="first image"></div>
+            <div><img src="img/meore.png" class="second image"></div>
         </div>
         <div class="main-title">
             <p class="main-title-sm">WHO WE ARE</p>
@@ -66,22 +66,22 @@
         </div>
         <div class="four-divs container">
             <div class="four-divs-div margina">
-                <img src="/img/diamond.png" class="div-icon">
+                <img src="img/diamond.png" class="div-icon">
                 <h4 class="div-title">ARCHITECTURE</h4>
                 <p class="div-p">architecture has to do with planning and designing form, space and ambience to reflect functional.</p>
             </div>
             <div class="four-divs-div margina">
-                <img src="/img/interior.png" class="div-icon">
+                <img src="img/interior.png" class="div-icon">
                 <h4 class="div-title">INTERIOR DESIGN</h4>
                 <p class="div-p">Is the process of shaping the experience of interior space, through the manipulation of spatial volume</p>
             </div>
             <div class="four-divs-div margina">
-                <img src="/img/furniture.png" class="div-icon">
+                <img src="img/furniture.png" class="div-icon">
                 <h4 class="div-title">FURNITURE DESIGN</h4>
                 <p class="div-p">Furniture refers to movable objects intended to support various human activities such as seating.</p>
             </div>
             <div class="four-divs-div margina">
-                <img src="/img/consulting.png" class="div-icon">
+                <img src="img/consulting.png" class="div-icon">
                 <h4 class="div-title">CONSULING</h4>
                 <p class="div-p">Consultant: someone who is employed externally to the client, either bt a consulting firm or some other agency.</p>
             </div>
@@ -94,7 +94,7 @@
     </div>
     <div class="tree-divs">
         <div class="tree-divs-div">
-            <img class="tree-divs-div-img" src="/img/pirveli111.png">
+            <img class="tree-divs-div-img" src="img/pirveli111.png">
             <div class="tree-divs-div-text-wrapper">
             <h4 class="div-title ">SOMETHING I NEED TO TELL YOU</h4>
             <p class="main-title-sm">MAY 16, 2016</p>
@@ -102,7 +102,7 @@
         </div>
         </div>
         <div class="tree-divs-div">
-            <img class="tree-divs-div-img" src="/img/meore222.png">
+            <img class="tree-divs-div-img" src="img/meore222.png">
             <div class="tree-divs-div-text-wrapper">
             <h4 class="div-title ">ARE YOU DOING THE RIGHT WAY?</h4>
             <p class="main-title-sm">MAY 16, 2016</p>
@@ -110,7 +110,7 @@
         </div>
         </div>
         <div class="tree-divs-div">
-            <img class="tree-divs-div-img" src="/img/mesame333.png">
+            <img class="tree-divs-div-img" src="img/mesame333.png">
             <div class="tree-divs-div-text-wrapper">
             <h4 class="div-title ">WHY YOU SHOULD ALWAYS FIRST</h4>
             <p class="main-title-sm">MAY 16, 2016</p>
@@ -125,12 +125,12 @@
     <p class="footer-c">© Coded by Kacho.</p>
     <a href="#home" class="gotoa">GO TO TOP OF THE PAGE</a>
     <div class="logos">
-        <a href="https://www.facebook.com/kacho1337" target="_blank"><img src="/img/facebook-logo.svg" class="logoebi"></a>
-        <a href="https://www.instagram.com/kachovar/" target="_blank"><img src="/img/instagram.svg" class="logoebi"></a>
-        <a href="https://www.linkedin.com/in/luka-katchkatchishvili" target="_blank"><img src="/img/linkedin.svg" class="logoebi"></a>
+        <a href="https://www.facebook.com/kacho1337" target="_blank"><img src="img/facebook-logo.svg" class="logoebi"></a>
+        <a href="https://www.instagram.com/kachovar/" target="_blank"><img src="img/instagram.svg" class="logoebi"></a>
+        <a href="https://www.linkedin.com/in/luka-katchkatchishvili" target="_blank"><img src="img/linkedin.svg" class="logoebi"></a>
     </div>
 </div>
 </footer>
-<script src="/js/script.js"></script>
+<script src="js/script.js"></script>
 </body>
 </html>
