--- a/works.html
+++ b/works.html
@@ -35,25 +35,24 @@
 <div class="container">
     <div class="title"><p class="title-p">Works</p></div>
     <div class="six-div">
-        <div class="six-div-divs">
-            <img src="/img/high building.png">
+        <div>
+            <img class="six-div-divs" src="/img/high building.png">
         </div>
-        <div class="six-div-divs">
-            <img src="/img/high building.png">
+        <div>
+            <img class="six-div-divs" src="/img/high building.png">
         </div>
-        <div class="six-div-divs">
-            <img src="/img/high building.png">
+        <div>
+            <img class="six-div-divs" src="/img/high building.png">
         </div>
-        <div class="six-div-divs">
-            <img src="/img/high building.png">
+        <div>
+            <img class="six-div-divs" src="/img/high building.png">
         </div>
-        <div class="six-div-divs">
-            <img src="/img/high building.png">
+        <div>
+            <img class="six-div-divs" src="/img/high building.png">
         </div>
-        <div class="six-div-divs">
-            <img src="/img/high building.png">
+        <div>
+            <img class="six-div-divs" src="/img/high building.png">
         </div>
-    
 </div>
 </section>
 <script src="js/script.js"></script>
