--- a/works.html
+++ b/works.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="css/reset.css">
     <link rel="stylesheet" href="css/main.css">
     <link rel="stylesheet" href="css/works.css">
+    <link rel="stylesheet" href="css/works_res.css">
     <link rel="stylesheet" href="css/responsive.css">
     <title>Viramain</title>
     <link rel="shortcut icon" href="https://icon-library.com/images/architecture-icon-png/architecture-icon-png-17.jpg">
@@ -36,25 +37,68 @@
     <div class="title"><p class="title-p">Works</p></div>
     <div class="six-div">
         <div>
-            <img class="six-div-divs" src="/img/high building.png">
+            <img class="six-div-divs" src="/img/interioraa.png">
+            <h3 class="six-div-title">Grey Walled Interior</h3>
+            <p class="six-div-p">BRANDING</p>
+        </div>
+        <div>
+            <img class="six-div-divs" src="/img/daytime.png">
+            <h3 class="six-div-title">Grey Walled Interior</h3>
+            <p class="six-div-p">BRANDING</p>
         </div>
         <div>
             <img class="six-div-divs" src="/img/high building.png">
+            <h3 class="six-div-title">Grey Walled Interior</h3>
+            <p class="six-div-p">BRANDING</p>
+        </div>
+        <div>
+            <img class="six-div-divs" src="/img/building.png">
+            <h3 class="six-div-title">Grey Walled Interior</h3>
+            <p class="six-div-p">BRANDING</p>
+        </div>
+        <div>
+            <img class="six-div-divs" src="/img/steadfastness.png">
+            <h3 class="six-div-title">Grey Walled Interior</h3>
+            <p class="six-div-p">BRANDING</p>
+        </div>
+        <div>
+            <img class="six-div-divs" src="/img/architectural.png">
+            <h3 class="six-div-title">Grey Walled Interior</h3>
+            <p class="six-div-p">BRANDING</p>
+        </div>   
+    <div class="six-div" id="hidden">
+        <div>
+            <img class="six-div-divs" src="/img/high building.png">
+            <h3 class="six-div-title">Grey Walled Interior</h3>
+            <p class="six-div-p">BRANDING</p>
         </div>
         <div>
             <img class="six-div-divs" src="/img/high building.png">
+            <h3 class="six-div-title">Grey Walled Interior</h3>
+            <p class="six-div-p">BRANDING</p>
         </div>
         <div>
             <img class="six-div-divs" src="/img/high building.png">
-        </div>
-        <div>
-            <img class="six-div-divs" src="/img/high building.png">
-        </div>
-        <div>
-            <img class="six-div-divs" src="/img/high building.png">
-        </div>
+            <h3 class="six-div-title">Grey Walled Interior</h3>
+            <p class="six-div-p">BRANDING</p>
+        </div> 
 </div>
+</div>
+<div class="buttoni"><button type="button" id="button" class="btn btn-light">LOAD MORE</button></div></a>
 </section>
+
+<footer id="about">
+    <div class="container footeri">
+    <p class="footer-c">© Coded by Kacho.</p>
+    <a href="#home" class="gotoa">GO TO TOP OF THE PAGE</a>
+    <div class="logos">
+        <a href="https://www.facebook.com/kacho1337" target="_blank"><img src="img/facebook-logo.svg" class="logoebi"></a>
+        <a href="https://www.instagram.com/kachovar/" target="_blank"><img src="img/instagram.svg" class="logoebi"></a>
+        <a href="https://www.linkedin.com/in/luka-katchkatchishvili" target="_blank"><img src="img/linkedin.svg" class="logoebi"></a>
+    </div>
+</div>
+</footer>
 <script src="js/script.js"></script>
+<script src="js/works.js"></script>
 </body>
 </html>
