--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
         <p class="logo">Viramain</p>
     <nav class="nav-links " id="navbarLinks">
         <ul>
-            <a href="#home"><li>Home </li></a>
-            <li><a href="#blog">Blog</a></li>
+            <a href="#"><li>Home</li></a>
+            <li><a href="/works.html">Works</a></li>
             <li><a href="#services">Services</a></li>
             <li><a href="#news">News</a></li>
             <li><a href="#about">About</a></li>
