--- a/works.html
+++ b/works.html
@@ -21,8 +21,8 @@
         <p class="logo">Viramain</p>
     <nav class="nav-links " id="navbarLinks">
         <ul>
-            <a href="#home"><li>Home </li></a>
-            <a href="#blog"><li>Blog</li></a>
+            <a href="/index.html"><li>Home</li></a>
+            <a href="#"><li>Works</li></a>
             <a href="#services"><li>Services</li></a>
             <a href="#news"><li>News</li></a>
             <a href="#about"><li>About</li></a>
