--- a/works.html
+++ b/works.html
@@ -84,7 +84,7 @@
         </div> 
 </div>
 </div>
-<div class="buttoni"><button type="button" id="button" class="btn btn-light">LOAD MORE</button></div></a>
+<!-- <div class="buttoni"><button type="button" id="button" class="btn btn-light">LOAD MORE</button></div></a> -->
 </section>
 
 <footer id="about">
