--- a/index.html
+++ b/index.html
@@ -21,10 +21,10 @@
     <nav class="nav-links " id="navbarLinks">
         <ul>
             <a href="#"><li>Home</li></a>
-            <li><a href="/works.html">Works</a></li>
-            <li><a href="#services">Services</a></li>
-            <li><a href="#news">News</a></li>
-            <li><a href="#about">About</a></li>
+            <a href="/works.html"><li>Works</li></a>
+            <a href="/contact.html"><li>Contact</li></a>
+            <a href="#news"><li>News</li></a>
+            <a href="#about"><li>About</li></a>
         </ul>
     </nav>
     <i class="fas fa-bars" id="toogleButton"></i>
