--- a/contact.html
+++ b/contact.html
@@ -20,11 +20,11 @@
         <p class="logo">Viramain</p>
     <nav class="nav-links " id="navbarLinks">
         <ul>
-            <a href="#"><li>Home</li></a>
-            <li><a href="/works.html">Works</a></li>
-            <li><a href="#services">Services</a></li>
-            <li><a href="#news">News</a></li>
-            <li><a href="#about">About</a></li>
+            <a href="/index.html"><li>Home</li></a>
+            <a href="/works.html"><li>Works</li></a>
+            <a href="#"><li>Contact</li></a>
+            <a href="#news"><li>News</li></a>
+            <a href="#about"><li>About</li></a>
         </ul>
     </nav>
     <i class="fas fa-bars" id="toogleButton"></i>
@@ -32,23 +32,32 @@
 </div>
 </section>
 
-<section class="contact-info">
-<div class="container">
+<section class="contact-info container">
 <div class="contact-wrapper">
     <h1 class="contact-title">Contact Info:</h1>
     <p class="contact-information">Let us know what you're looking for in an agency. We'ss take a look and see if this could be the start of something beautiful. Please get in touch and let's schedule time to talk!</p>
-    <p class="contact-address"><span style="font-weight: 500;">Address: </span></p>
-    <p class="contact-phone"><span style="font-weight: 500;">Phone: </span></p>
-    <p class="contact-email"><span style="font-weight: 500;">Enail: </span></p>
-    <p class="contact-fax"><span style="font-weight: 500;">Fax: </span></p>
+    <p class="contact-address"><span style="font-weight: 500; line-height: 2;">Address: </span>Digmis Masivi Tbilisi, GE</p>
+    <p class="contact-phone"><span style="font-weight: 500; line-height: 2;">Phone: </span>+995 593 21 21 00</p>
+    <p class="contact-email"><span style="font-weight: 500; line-height: 2;">Enail: </span>luka.katchkatchishvili.1@gmail.com</p>
+    <p class="contact-fax"><span style="font-weight: 500; line-height: 2;">Fax: </span>+995 558 30 35 14</p>
 </div>
+<form>
+    <h1 class="contact-title">Get in Touch</h1>
+<div class="input-wrapper">
+    <input type="text" placeholder="Your Name">
+    <input type="text" placeholder="Your Email">
 </div>
+<textarea name="comment" placeholder="Your Comment"></textarea>
+<button type="button" class="btn btn-dark">SEND MESSAGE</button>
+</form>
 </section>
+
 <div class="feature map">
-    <div class="container">
+    <!-- <div class="container"> -->
     <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2976.429079296535!2d44.77320310265908!3d41.75440585387421!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4044727dcb029413%3A0xbdd376441a681f82!2zNDHCsDQ1JzIxLjYiTiA0NMKwNDYnMjguMiJF!5e0!3m2!1sen!2sge!4v1634033030152!5m2!1sen!2sge" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
 </div>
-</div>
+<!-- </div> -->
+
 <footer id="about">
     <div class="container footeri">
     <p class="footer-c">© Coded by Kacho.</p>
