--- a/works.html
+++ b/works.html
@@ -23,7 +23,7 @@
         <ul>
             <a href="/index.html"><li>Home</li></a>
             <a href="#"><li>Works</li></a>
-            <a href="#services"><li>Services</li></a>
+            <a href="/contact.html"><li>Contact</li></a>
             <a href="#news"><li>News</li></a>
             <a href="#about"><li>About</li></a>
         </ul>
