--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
     <nav class="nav-links " id="navbarLinks">
         <ul>
             <a href="#"><li>Home</li></a>
-            <a href="works.html"><li>Works</li></a>
-            <a href="contact.html"><li>Contact</li></a>
+            <a href="/html/works.html"><li>Works</li></a>
+            <a href="/html/contact.html""><li>Contact</li></a>
             <a href="#news"><li>News</li></a>
             <a href="#about"><li>About</li></a>
         </ul>
