--- a/contact.html
+++ b/contact.html
@@ -20,8 +20,8 @@
         <p class="logo">Viramain</p>
     <nav class="nav-links " id="navbarLinks">
         <ul>
-            <a href="/index.html"><li>Home</li></a>
-            <a href="/works.html"><li>Works</li></a>
+            <a href="index.html"><li>Home</li></a>
+            <a href="works.html"><li>Works</li></a>
             <a href="#"><li>Contact</li></a>
             <a href="#news"><li>News</li></a>
             <a href="#about"><li>About</li></a>
