--- a/steadfastness.html
+++ b/steadfastness.html
@@ -41,20 +41,20 @@
     <div class="container">
         <div class="single-works-divs erti">
         <div>
-            <img class="single-work" src="/img/singlework1.png">
+            <img class="single-work" src="img/singlework1.png">
         </div>
         <div>
-            <img class="single-work" src="/img/singlework2.png">
+            <img class="single-work" src="img/singlework2.png">
         </div>
         <div>
-            <img class="single-work" src="/img/singlework3.png">
+            <img class="single-work" src="img/singlework3.png">
         </div></div>
         <div class="single-works-divs ori">
         <div>
-            <img class="single-work" src="/img/singlework4.png">
+            <img class="single-work" src="img/singlework4.png">
         </div>
         <div>
-            <img class="single-work" src="/img/singlework5.png">
+            <img class="single-work" src="img/singlework5.png">
         </div>
         </div>
     <div class="afterwork-wrapper">
