--- a/works.html
+++ b/works.html
@@ -21,9 +21,9 @@
         <p class="logo">Viramain</p>
     <nav class="nav-links " id="navbarLinks">
         <ul>
-            <a href="/index.html"><li>Home</li></a>
+            <a href="index.html"><li>Home</li></a>
             <a href="#"><li>Works</li></a>
-            <a href="/contact.html"><li>Contact</li></a>
+            <a href="contact.html"><li>Contact</li></a>
             <a href="#news"><li>News</li></a>
             <a href="#about"><li>About</li></a>
         </ul>
@@ -37,32 +37,32 @@
     <div class="title"><p class="title-p">Works</p></div>
     <div class="six-div">
         <div>
-            <img class="six-div-divs" src="/img/interioraa.png">
+            <img class="six-div-divs" src="img/interioraa.png">
             <h3 class="six-div-title">Grey Walled Interior</h3>
             <p class="six-div-p">BRANDING</p>
         </div>
         <div>
-            <img class="six-div-divs" src="/img/daytime.png">
+            <img class="six-div-divs" src="img/daytime.png">
             <h3 class="six-div-title">Grey Walled Interior</h3>
             <p class="six-div-p">BRANDING</p>
         </div>
         <div>
-            <img class="six-div-divs" src="/img/high building.png">
+            <img class="six-div-divs" src="img/high building.png">
             <h3 class="six-div-title">Grey Walled Interior</h3>
             <p class="six-div-p">BRANDING</p>
         </div>
         <div>
-            <img class="six-div-divs" src="/img/building.png">
+            <img class="six-div-divs" src="img/building.png">
             <h3 class="six-div-title">Grey Walled Interior</h3>
             <p class="six-div-p">BRANDING</p>
         </div>
         <div>
-            <img class="six-div-divs" src="/img/steadfastness.png">
+            <img class="six-div-divs" src="img/steadfastness.png">
             <h3 class="six-div-title">Grey Walled Interior</h3>
             <p class="six-div-p">BRANDING</p>
         </div>
         <div>
-            <img class="six-div-divs" src="/img/architectural.png">
+            <img class="six-div-divs" src="img/architectural.png">
             <h3 class="six-div-title">Grey Walled Interior</h3>
             <p class="six-div-p">BRANDING</p>
         </div>   
