--- a/works.html
+++ b/works.html
@@ -36,34 +36,34 @@
 <div class="container">
     <div class="title"><p class="title-p">Works</p></div>
     <div class="six-div">
-        <div>
+        <a href="steadfastness.html"><div>
             <img class="six-div-divs" src="img/interioraa.png">
             <h3 class="six-div-title">Grey Walled Interior</h3>
             <p class="six-div-p">BRANDING</p>
-        </div>
+        </div></a>
         <div>
             <img class="six-div-divs" src="img/daytime.png">
-            <h3 class="six-div-title">Grey Walled Interior</h3>
+            <h3 class="six-div-title">Houses during Daytime</h3>
             <p class="six-div-p">BRANDING</p>
         </div>
         <div>
             <img class="six-div-divs" src="img/high building.png">
-            <h3 class="six-div-title">Grey Walled Interior</h3>
+            <h3 class="six-div-title">High Building</h3>
             <p class="six-div-p">BRANDING</p>
         </div>
         <div>
             <img class="six-div-divs" src="img/building.png">
-            <h3 class="six-div-title">Grey Walled Interior</h3>
+            <h3 class="six-div-title">Silver Building</h3>
             <p class="six-div-p">BRANDING</p>
         </div>
         <div>
             <img class="six-div-divs" src="img/steadfastness.png">
-            <h3 class="six-div-title">Grey Walled Interior</h3>
+            <h3 class="six-div-title">Steadfastness</h3>
             <p class="six-div-p">BRANDING</p>
         </div>
         <div>
             <img class="six-div-divs" src="img/architectural.png">
-            <h3 class="six-div-title">Grey Walled Interior</h3>
+            <h3 class="six-div-title">Architectural Building</h3>
             <p class="six-div-p">BRANDING</p>
         </div>   
     <div class="six-div" id="hidden">
@@ -84,7 +84,7 @@
         </div> 
 </div>
 </div>
-<div class="buttoni"><button type="button" id="button" class="btn btn-light">LOAD MORE</button></div></a>
+<!-- <div class="buttoni"><button type="button" id="button" class="btn btn-light">LOAD MORE</button></div></a> -->
 </section>
 
 <footer id="about">
