--- a/steadfastness.html
+++ b/steadfastness.html
@@ -20,9 +20,9 @@
             <p class="logo">Viramain</p>
         <nav class="nav-links " id="navbarLinks">
             <ul>
-                <a href="/index.html"><li>Home</li></a>
+                <a href="index.html"><li>Home</li></a>
                 <a href="#"><li>Works</li></a>
-                <a href="/contact.html"><li>Contact</li></a>
+                <a href="contact.html"><li>Contact</li></a>
                 <a href="#news"><li>News</li></a>
                 <a href="#about"><li>About</li></a>
             </ul>
