--- a/steadfastness.html
+++ b/steadfastness.html
@@ -34,7 +34,7 @@
 <section class="home-title">
 <div class="title-wrapper">
     <p>ARCHITECTURE</p>
-    <h1 class="title">STEADFASTNESS</h1>
+    <h1 class="title">GREY WALLED INTERIOR</h1>
 </div>
 </section>
 <section class="single-works">
